--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "ember-resolver": "~0.1.15",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "mousetrap": "1.5.3"
+    "qunit": "~1.17.1"
   },
   "devDependencies": {
     "mousetrap": "1.5.3"
